kubernetes-network-policy-isolation/manifests/dev-default-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
