kubernetes-network-policy-isolation/manifests/prod-allow-dev-web-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dev-web-to-prod-db
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: db
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
      podSelector:
        matchLabels:
          app: web
          tier: frontend
    ports:
    - protocol: TCP
      port: 3306
